# videoschnitt

./: .env  .gitignore  CLI_Documentation.md  Dockerfile  README.md  config.toml  docker-compose.yml  docker-environment.txt  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: release-drafter-config.yml  release-drafter.yml  release.yml
.github/workflows/: draft_release.yml  publish_docker_image.yml  publish_package.yml  release-draft.yml  test_and_build.yml  test_build_release.yml  upload_release_assets.yml
docs/: CLI-Design.md  Configuration.md  DataFlow.drawio  DockerRuntime.md  LogManagement.md  NeueOriginalmedien.md  PackagesCommunication.md  PackagesDocumentation.md  PackagesInVirtualEnvironment.md  PackagesStructure.md  PotentialWebApi.md  PythonPackages.md  RuntimeArchitecture.md  Wolverine.md  architecture_decision.md  archiving-costs.md  config_via_env_vars.md  fcp_integrator_script.md  hosting-model.md  kurmann_mediaset.md  launchd.md  log-rotation.md  mediaset-creation.md  mediaset_identification.md  mediaset_integration.md  packages_and_typer.md  storage-terms.md  verb_based_subcommands.md
docs/cli/: apple_compressor_manager.md  apple_compressor_runner.md  config_manager.md  dji_import.md  emby_integrator.md  fcp_integrator.md  ffmpeg_compressor.md  iclouddrive_integrator.md  kurmann_videoschnitt.md  mediaset_manager.md  metadata_manager.md  movie_integrator.md  online_medialibrary_manager.md  original_media_integrator.md  video_compressor.md
docs/date/: metadate_before.md
docs/specs/: family_movies.md  family_movies_icloud.md  familymovies.md  homemovies.md  homemovies_emby.md  homemovies_final_cut_workflow.md
src/: Dockerfile  Kraftwerk.sln  Videoschnitt.sln  cleanup_prores.py  setup.py
src/Application/: .gitignore  Application.csproj  FileWatcherService.cs  LogController.cs  LogHub.cs  MessageLogHubService.cs  Program.cs  _Imports.razor  appsettings.Development.json  appsettings.json
src/Application.Workflows/: FinalCutProWorkflow.cs  IAsyncValueWorkflow.cs  IAsyncWorkflow.cs
src/ApplicationConfiguration/: ApplicationConfiguration.csproj  MetadataProcessingSettings.cs
src/ApplicationWorkflows/: ApplicationWorkflows.csproj
src/Common/: ApplicationSettings.cs  Common.csproj  ExecuteCommandService.cs  ServiceCollectionExtensions.cs
src/CommonServices/: ExecuteCommandService.cs  FileTransferService.cs  ServiceCollectionExtensions.cs
src/ConfigurationModule/: ConfigurationModule.csproj  ServiceCollectionExtensions.cs
src/ConsoleApp/: ConsoleApp.csproj  Program.cs
src/Engine/: Engine.csproj  EngineSettings.cs  ServiceCollection.cs  ServiceCollectionExtensions.cs
src/HealthCheck/: ApplicationSettings.cs  Engine.cs  HealthCheck.csproj  HealthCheckFeature.cs  ServiceCollectionExtensions.cs  Workflow.cs
src/InfuseMediaLibrary/: ApplicationSettings.cs  Engine.cs  InfuseMediaLibrary.csproj  ModuleSettings.cs  ServiceCollectionExtensions.cs  Settings.cs  Workflow.cs
src/LocalFileSystem/: LocalFileSystem.csproj  ServiceCollectionExtensions.cs
src/MediaArchiver/: MediaArchiver.csproj  Workflow.cs
src/MediaSetOrganizer/: Engine.cs  (+3 more)
testdata/: 2024-06-05 Zeitraffer Wolken Testaufnahme-4K-Internet.m4v.txt  2024-06-05 Zeitraffer Wolken Testaufnahme-4K-Medienserver.mov.txt  2024-06-05 Zeitraffer Wolken Testaufnahme.jpg.txt  2024-06-05 Zeitraffer Wolken Testaufnahme.xml  2024-06-13 Testaufnahme Ringelblumen.xml
(+382 files in other folders)
