[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kurmann-videoschnitt"
version = "1.2.0"
description = "Sammlung von Werkzeugen zur Automatisierungen im privaten Videoschnitt"
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = {text = "Apache-2.0"}
authors = [
  { name = "Patrick Kurmann", email = "kurmannwillisau@gmail.com" }
]
dependencies = [
  "click==8.1.7",
  "python-dotenv==1.0.1",
  "typer==0.12.5",
  "osxmetadata==1.3.5; python_version >= '3.8' and python_version < '3.13'",
  "toml==0.10.2",
  "pyyaml==6.0.2",
  "python-ulid==3.0.0",
  "jsonschema",
  "requests",
  "ulid-py"
]

[project.scripts]
original-media-integrator = "original_media_integrator.app:app"
emby-integrator = "emby_integrator.app:app"
online-medialibrary-manager = "online_medialibrary_manager.app:app"
config-manager = "config_manager.app:app"
metadata-manager = "metadata_manager.app:app"
mediaset-manager = "mediaset_manager.app:app"
video-compressor = "video_compressor.app:app"
movie-integrator = "movie_integrator.app:app"
iclouddrive-integrator = "iclouddrive_integrator.app:app"
fcp-integrator = "fcp_integrator.app:app"

[project.urls]
Homepage = "https://github.com/kurmann/videoschnitt"

[tool.setuptools.packages.find]
where = ["src"]